# snapcraft

./: pyproject.toml
snapcraft/parts/plugins/: colcon_plugin.py
tests/legacy/unit/meta/: test_meta.py
tests/spread/plugins/v1/catkin/daemon/: task.yaml
tests/spread/plugins/v1/catkin/snaps/ros-node/snap/: snapcraft.yaml
tests/spread/plugins/v1/catkin/snaps/ros-node/src/ros-node/: CMakeLists.txt  node.launch  package.xml
tests/spread/plugins/v1/catkin/snaps/ros-node/src/ros-node/src/: ros_node.cpp
tests/spread/plugins/v1/catkin/snaps/ros-node/src/talker/: CMakeLists.txt
tests/spread/plugins/v1/catkin/snaps/ros-node/src/talker/src/: ros_node.cpp
tests/spread/plugins/v1/colcon/daemon/: task.yaml
tests/spread/plugins/v1/colcon/snaps/colcon-daemon/snap/: snapcraft.yaml
tests/spread/plugins/v1/colcon/snaps/ros-node/snap/: snapcraft.yaml
tests/spread/plugins/v1/colcon/snaps/ros-node/src/ros-node/: CMakeLists.txt  main.cpp  package.xml
tests/spread/plugins/v2/colcon-ros2-hello/: task.yaml
tests/spread/plugins/v2/snaps/colcon-daemon/snap/: snapcraft.yaml
tests/spread/plugins/v2/snaps/colcon-ros2-content-sharing/: CMakeLists.txt  package.xml
tests/spread/plugins/v2/snaps/colcon-ros2-content-sharing/snap/: snapcraft.yaml
tests/spread/plugins/v2/snaps/colcon-ros2-content-sharing/src/: hello.cpp
tests/unit/parts/plugins/: test_colcon.py
